--- a/head_first/.settings/org.eclipse.core.resources.prefs
+++ b/head_first/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,6 @@ encoding//WebRoot/JSP/beerAdvice003.jsp=UTF-8
 encoding//WebRoot/JSP/useJsp01007.jsp=UTF-8
 encoding//WebRoot/JSP/useJsp02.jsp=UTF-8
 encoding//WebRoot/JSP/useJspForward009.jsp=UTF-8
+encoding//WebRoot/WEB-INF/tags/header.tag=UTF-8
 encoding//WebRoot/html/public/foot.jspf=UTF-8
 encoding//WebRoot/index.jsp=UTF-8
