--- a/struts2_ln/web/WEB-INF/web.xml
+++ b/struts2_ln/web/WEB-INF/web.xml
@@ -11,7 +11,7 @@
         <filter-name>struts2</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
- <!--   <filter>
+    <filter>
         <filter-name>loginFilter</filter-name>
         <filter-class>test002Filter.LoginFilter</filter-class>
     </filter>
@@ -26,7 +26,7 @@
     <filter-mapping>
         <filter-name>loginFilter</filter-name>
         <url-pattern>/index.jsp</url-pattern>
-    </filter-mapping>-->    <!--登录验证过滤-->
+    </filter-mapping>   <!--登录验证过滤-->
     <welcome-file-list>
         /index.jsp
     </welcome-file-list>
